   Suggested by Stephan Koops for the JAX-RS extension.
 - Added JiBX extension, alternative to JAXB. Contributed by Florian Schwarz.
 - Added support for nested resources in WadlComponent. Contributed by Avi Flax.
 - Resources with no variant set now log a warning on GET requests. Contributed by Avi Flax.
 - Added static Representation.createEmpty() method to return a new empty representation. 
  
[Misc]
 - Added Engine.copyResponseHeaders() method. Contributed by Stephan Koops.
 - Handlers now return a SERVER_INTERNAL_ERROR instead of CLIENT_NOT_FOUND when no next Restlet is
   attached to them. Suggested by Paul J. Lucas.
 - Added Engine.formatCookie(), formatCookieSetting() and equivalent parse*() methods. Contributed by Stephan
   Koops for the JAX-RS implementation.
 - Deprecated Status.isInfo(), replaced by isInformational() to follow HTTP naming.

1.1 Milestone 1 (2007-12-24)
[Bugs fixed]
 - Overridden the StringRepresentation#setCharacterSet method, in order to refresh the 
   size of the representation. Reported by Calvin Cheng.
 - Fixed issue in the selection of connectors. The last connector in the classpath for
   a given protocol was selected instead of the first one, leading to counter-intuitive 
   behavior when multiple connectors were present in the classpath.
 - Fixed bug in DomRepresentation causing the loss of both public and system DocTypes. 
   Reported by Lee Saferite.
 - Fixed path error in test cases  module. Reported by Sean Landis, contributed by Alex Milowski.
 - SaxRepresentation constructors don't throw IOException anymore. Reported by Paul J. Lucas.
 - Fixed multi-threading issues. Reported by Tim Peierls. Some contributions by Kevin Conaway.
 - Renamed the HTTP_AWS challenge scheme into HTTP_AWS_S3 as there are changes for each existing
   Amazon Web Service. Reported by Guy Ernest.

[Enhancements] 
 - Added a getApplication() method to Context and Resource classes.